--- a/CalApp/templates/demographics.html
+++ b/CalApp/templates/demographics.html
@@ -4,13 +4,13 @@
   <form method="post">
     {% csrf_token %}
     <label for="name">Name:</label>
-    <input type="text" name="name" required>
+    <input type="text" id="name" name="name" required>
     <br>
     <label for="age">Age:</label>
-    <input type="number" name="age" required>
+    <input type="number" id="age" name="age" required>
     <br>
-    <label for="email">Email:</label>
-    <input type="email" name="email" required>
+    <label for="filling_status">Filing status:</label>
+    {{ form.filling_status }}
     <br>
     <button type="submit">Next</button>
   </form>
