--- a/CalApp/templates/charitable.html
+++ b/CalApp/templates/charitable.html
@@ -7,6 +7,8 @@
     <input type="number" name="charitable_contributions">
     <br>
     <button type="submit">Next</button>
+    <button type="button" onclick="history.back()">Back</button>
+
   </form>
 {% endblock %}
 
