--- a/CalApp/templates/medical.html
+++ b/CalApp/templates/medical.html
@@ -7,6 +7,7 @@
     <input type="number" name="medical_expenses">
     <br>
     <button type="submit">Next</button>
-    
+    <button type="button" onclick="history.back()">Back</button>
+
     </form>
 {% endblock %}
