--- a/CalApp/templates/vehicle.html
+++ b/CalApp/templates/vehicle.html
@@ -7,5 +7,7 @@
     <input type="number" name="taxes_registration">
     <br>
     <button type="submit">Next</button>
+    <button type="button" onclick="history.back()">Back</button>
+
   </form>
 {% endblock %}
