--- a/CalApp/templates/demographics.html
+++ b/CalApp/templates/demographics.html
@@ -12,7 +12,9 @@
     <label for="filling_status">Filing status:</label>
     {{ form.filling_status }}
     <br>
-    <button type="submit">Next</button>
+    <div class ="button_container">
+      <button type="next">Next</button>
+    </div>
   </form>
 #{% endblock %}
 
