--- a/CalApp/templates/education.html
+++ b/CalApp/templates/education.html
@@ -3,27 +3,29 @@
 {% block content %}
   <form method="post">
     {% csrf_token %}
+    
     <p></p>
-    <label for="enrolled">Enrolled in undergraduate program:</label>
-    <input type="checkbox" name="enrolled" value="True">
+    <!-- <label for="enrolled">Enrolled in undergraduate program:</label>
+    <input type="checkbox" name="enrolled" value="True"> -->
     <br>
     <p></p>
     <label for="college_expenses">College expenses:</label><p> Enter the total projected amount will pay on tution 
       or the amount on your 1098-T if you have received.</p>
 
-    <input type="number" name="college_expenses">
+    <input type="float" name="college_expenses" required>
     <br>
     <label for="student_loan_interest">Student Loan Interest:</label><p> Enter the total projected amount will pay on interest  
       on your student loan.</p>
-    <input type="number" name="student_loan_interest">
+    <input type="float" name="student_loan_interest" required>
     <br>    
     <label for="scholarships_received">Scholarships received:</label><p> Enter the total projected amount will receive on   
       scholarships.</p>
-    <input type="number" name="scholarships_received">
+    <input type="float" name="scholarships_received" required>
     <br>
-    <button type="submit">Next</button>
-    <button type="button" onclick="history.back()">Back</button>
-
+    <div class ="button_container">
+      <button class = "back" onclick="history.back()">Back</button>
+      <button type="next">Next</button>
+    </div>
   </form>
 {% endblock %}
 
