--- a/CalApp/templates/home.html
+++ b/CalApp/templates/home.html
@@ -3,15 +3,21 @@
 {% block content %}
   <form method="post">
     {% csrf_token %}
+    
+    
+    
     <label for="own">Do you own a house:</label>
     <input type="checkbox" name="own" value="True">
     <br>
     <label for="interest_taxes">Total interest paid:</label><p> Enter the total projected amount of    
       home mortgage interest and points.</p>
-    <input type="number" name="interest_taxes">
+    <input type="float" name="interest_taxes" required>
     <br>
-    <button type="submit">Next</button>
-    <button type="button" onclick="history.back()">Back</button>
-
+    
+    
+    <div class ="button_container">
+      <button class = "back" onclick="history.back()">Back</button>
+      <button type="next">Next</button>
+    </div>
   </form>
 {% endblock %}
