--- a/CalApp/static/css/Cal.css
+++ b/CalApp/static/css/Cal.css
@@ -2,37 +2,96 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #10d4c4;
+    background-color: #194809;
+  }
+
+header {
+    display: grid;
+    grid-template-columns: 1f 1f;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #FFFDE4;
+    align-items: center;
+    text-align: center;
+    font-size: 1.5em
   }
   
-  .container {
+.container {
     max-width: 960px;
     margin: 0 auto;
     padding: 20px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
-  
-  /* Form styles */
-  
-  form {
+
+form {
+    /* display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-flow: row;
+    grid-gap: 1em; */
     display: flex;
     flex-direction: column;
+    }
+    
+.right {
+      display: grid;
+      grid-column: 2;
+      grid-row: 1;
+      background-color: rgba(15, 15, 197, 0.9);
+      height: 12em;
+      margin: 1em 1em;
+      padding: 3em;
+      justify-items: center;
+        
+    }
+    
+    
+.left {
+      display: grid;
+      grid-column: 1;
+      grid-row: 1;
+      background-color: rgba(202, 33, 33, 0.9);
+      height: 12em;
+      margin: 1em 1em;
+      padding: 3em;
+      justify-items: center;
+    }
+
+.button_container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-flow: row;
+    grid-gap: 1.5em;
+    align-items: justify;
+
+
+}
+
+button {
+    display: grid;
+    line-height: 2.5em;
+    width: 15em;
+    background-color: #ffca33;
+    font-size: 1em;
+    border-radius: 20px 20px 20px 20px;   
   }
+
+.back {
+    display: grid;
+    right:0;   
+}
+    
+  /* Form styles */
   
-  label {
+label {
     margin-bottom: 5px;
     font-weight: bold;
   }
   
-  input[type=text], input[type=number] {
-    margin-bottom: 10px;
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
+
   
-  select {
+select {
     margin-bottom: 10px;
     padding: 5px;
     border: 1px solid #ccc;
@@ -40,10 +99,10 @@ body {
     background-color: #fff;
   }
   
-  input[type=submit] {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
+input {
+    background-color: #e7f4ca;
+    color: black;
+    border: 1px solid black;
     border-radius: 5px;
     padding: 10px;
     cursor: pointer;
@@ -51,21 +110,21 @@ body {
   
   /* Table styles */
   
-  table {
+table {
     border-collapse: collapse;
     width: 100%;
   }
   
-  th, td {
+th, td {
     text-align: left;
     padding: 8px;
   }
   
-  th {
+th {
     background-color: #007bff;
     color: #fff;
   }
   
-  tr:nth-child(even) {
+tr:nth-child(even) {
     background-color: #f2f2f2;
   }
