--- a/CalApp/templates/base.html
+++ b/CalApp/templates/base.html
@@ -7,10 +7,23 @@
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" type="text/css"href="{%static '/css/Cal.css' %}">
 </head>
+<header>
+    <div class="logo-box">
+       <img alt= "Logo" src= "{%static '/css/Logo2.png'%}" width="157" height="132">
+       <h1>Tax Calculator</h1>
+      </div>
+</header>
+    <!-- <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Contact-us.html">Contact us</a></li>
+        </ul>
+    </nav> -->
+</header>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Tax Calculator</a>
-    </nav>
+    </nav> -->
     <div class="container my-5">
         {% block content %}{% endblock %}
     </div>
